# pyhuec

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  example.py  pyproject.toml
examples/: advanced_light_control.py  basic_light_control.py  event_stream.py  manual_bridge_setup.py  rooms_and_scenes.py
src/pyhuec/: __init__.py  hue_client.py  hue_client_factory.py
src/pyhuec/controllers/: bridge_controller.py  event_controller.py  light_controller.py  room_controller.py  scene_controller.py
src/pyhuec/models/: __init__.py
src/pyhuec/models/dto/: __init__.py  bridge_dto.py  common_dto.py  device_dto.py  entertainment_dto.py  event_dto.py  grouped_light_dto.py  light_dto.py  room_dto.py  scene_dto.py
src/pyhuec/models/protocols/: __init__.py  bridge_protocols.py  device_protocols.py  event_protocols.py  grouped_light_protocols.py  light_protocols.py  room_protocols.py  scene_protocols.py  transport_protocols.py
src/pyhuec/repositories/: bridge_repository.py  grouped_light_repository.py  light_repository.py  room_repository.py  scene_repository.py
src/pyhuec/services/: bridge_service.py  event_bus.py  event_service.py  event_transformer.py  light_service.py  room_service.py  scene_service.py  state_manager.py
src/pyhuec/transport/: bridge_authenticator.py  event_client.py  event_producer.py  http_client.py  mdns_client.py
tests/: test_auto_discovery.py  test_events.py
